# ErTing

./: .gitignore  LICENSE  README.md  README_CN.md  denoise.py  pyproject.toml  requirements.txt  upload_pypi.bat  upload_pypi.sh
erting/: __main__.py  api.py  cli.py  core.py  gui.py  tools.py  web.py
erting/templates/: index.html
scripts/: publish.bat  publish.sh
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_core.py  test_tools.py
