[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "erting"
dynamic = ["version"]
description = "AI-powered audio/video denoising tool with CLI, GUI, and web interface"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "ErTing Contributors" },
]
keywords = ["denoise", "audio", "noise-reduction", "speech-enhancement", "ai", "modelscope"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "modelscope>=1.0",
    "flask>=3.0",
    "flask-cors>=4.0",
    "PySide6>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
erting = "erting.cli:main"
erting-gui = "erting.gui:main"
erting-web = "erting.web:main"

[project.urls]
Homepage = "https://github.com/cycleuser/ErTing"
Repository = "https://github.com/cycleuser/ErTing"
Issues = "https://github.com/cycleuser/ErTing/issues"

[tool.setuptools.dynamic]
version = { attr = "erting.__version__" }

[tool.setuptools.packages.find]
include = ["erting*"]

[tool.setuptools.package-data]
erting = [
    "templates/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
